--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,7 @@ version: "3.8"
 services:
   postgresql:
     image: postgres
+    container_name: postgres
     volumes:
       - "db:/var/lib/postgresql/data"
     restart: always
@@ -9,7 +10,12 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: root
       POSTGRES_DB: hh_bot
-    ports:
-      - "5432:5432"
+      POSTGRES_HOST: localhost
+  bot:
+    container_name: hh_bot
+    restart: always
+    depends_on:
+      - postgresql
+    build: ./
 volumes:
   db:
