--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: "3.3"
 services:
   postgresql:
     image: postgres
@@ -10,7 +10,9 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: root
       POSTGRES_DB: hh_bot
-      POSTGRES_HOST: localhost
+      POSTGRES_HOST: 0.0.0.0
+    ports:
+            - "5432:5432"
   bot:
     container_name: hh_bot
     restart: always
