--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,11 +13,12 @@ services:
       POSTGRES_HOST: 0.0.0.0
     ports:
       - "5432:5432"
-  bot:
-    container_name: hh_bot
-    restart: always
-    depends_on:
-      - postgresql
-    build: ./
+  # bot:
+  #   image: hh_bot
+  #   container_name: hh_bot
+  #   restart: always
+  #   depends_on:
+  #     - postgresql
+  #   build: ./
 volumes:
   db:
